--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,10 +1,7 @@
 .home{
-    max-width: 90%;
-    margin: auto;
-    padding-top: 1.25rem;
     display: flex;
     flex-direction: column;
-    gap: 2rem;    
+    gap: 2rem;   
 }
 
 .cards-grid{
@@ -12,6 +9,8 @@
     grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
     gap: 4rem;
     justify-content: space-between;
-    padding-block: 1rem;
 }
 
+.loading-icon{
+    margin: auto;
+}
