--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,12 @@ html {
   line-height: 1.5;
 }
 
+body {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  }
 /* A elements that don't have a class get default styles */
 a{
   all: unset;
