--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,10 +1,11 @@
 .navbar__wrapper{
     width: 100%;
     height: 60px;
-    box-shadow: 0px 2px 4px 1px rgba(0,0,0 ,0.2);
     position: sticky;
     top: 0;
     z-index: 99;
+    background-color: var(--clr-element);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .navbar {
