--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,8 @@
 :root{
-  --clr-darkmode-element:hsl(209,23%,22%);
-  --clr-darkmode-background:hsl(207,26%,17%);
-  --clr-darkmode-text:hsl(0,0%,100%);
+  --clr-element:hsl(0,0%,100%);
+  --clr-background:hsl(0,0%,98%);
+  --clr-text:hsl(200,15%,8%);
 
-  --clr-lightmode-element:hsl(0,0%,100%);
-  --clr-lightmode-background:hsl(0,0%,98%);
-  --clr-lightmode-text:hsl(200,15%,8%);
-
-  --clr-lightmode-input:hsl(0,0%,52%);
   --fs-home:14px;
   --fs-details:16px;
 }
@@ -19,6 +14,8 @@
   padding: 0;
   margin: 0;
   font-family: 'Nunito Sans', sans-serif;
+  list-style: none;
+  color: var(--clr-text);
 }
 
 /* Remove default margin */
@@ -31,18 +28,13 @@ html {
 }
 
 /* Set core body defaults */
-.App {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-}
-
 body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
+  background-color: var(--clr-background);
   }
 /* A elements that don't have a class get default styles */
 a{
@@ -62,11 +54,7 @@ input{
   outline: none;
   background-color: transparent;
 }
-.container{
-  max-width: 90%;
-  margin: auto;
-  padding-block: 1.25rem;
-}
+
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
