--- a/src/pages/details/details.css
+++ b/src/pages/details/details.css
@@ -1,13 +1,8 @@
-.details {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-}
-
 .country__details__wrapper {
     padding-block: 2rem;
     display: flex;
     flex-direction: column;
+    gap: 50px;
 }
 
 .btn-back {
@@ -17,9 +12,10 @@
     border: none;
     padding: 6px 12px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    cursor: pointer;
+    background-color: var(--clr-element);
     border-radius: 5px;
     gap: 8px;
-    margin-bottom: 4rem;
 }
 
 .btn-back>span {
@@ -27,69 +23,63 @@
     font-weight: 600;
 }
 
-.country__details {
-    display: grid;
-    grid-template-columns: 0.75fr 1fr;
-    place-content: center;
-    gap: 8%;
-}
-
 .country__details__flag {
-    height: 370px;
+    width:100%;
+    max-width:600px
 }
-
-.country__details__info {
+.country__details__name {
+    margin-bottom: 1rem;
+}
+.country__details {
     display: flex;
     flex-direction: column;
-    padding-top: 2rem;
-    gap: 2rem;
+    gap:1.5rem;
 }
 
+.middle{
+    display:flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+    margin-bottom: 1rem;
+}
 .detail {
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 0.5rem;
 }
-
 .detail>.oppa {
     opacity: 60%;
     font-weight: 600;
 }
-
-.middle {
-    display: flex;
-    justify-content: space-between;
-}
-
 .bottom {
     display: flex;
+    flex-wrap: wrap;
 }
 .borders__wrapper{
     display: flex;
+    flex-wrap: wrap;
     gap: 5px;
 }
-
-@media (max-width: 768px) {
-    .btn-back {
-        margin-bottom: 2rem;
+.border-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    padding: 6px 12px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: var(--clr-element);
+}
+@media (min-width: 1080px) {
+    .country__details{
+        flex-direction: row;
+        gap: 2rem;
+        width: 100%;
+        /* justify-content: space-between; */
     }
-
-    .country__details__flag {
-        height: auto;
-    }
-
-    .country__details {
-        grid-template-columns: 1fr;
-        gap: 0;
-    }
-
-    .middle {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .bottom {
-        flex-direction: column;
-        /* gap: 1rem; */
+    .middle{
+        justify-content: space-between;
+        width: 100%;
     }
 }
