--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,16 +1,7 @@
-.home{
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;   
-}
-
-.cards-grid{
-    display:grid;
-    grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
-    gap: 4rem;
-    justify-content: space-between;
-}
-
 .loading-icon{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: auto;
 }
