--- a/src/styles/pages.module.css
+++ b/src/styles/pages.module.css
@@ -1,3 +1,4 @@
+/*details styles*/
 .country__details__wrapper {
     padding-block: 2rem;
     display: flex;
@@ -5,7 +6,7 @@
     gap: 50px;
 }
 
-.btn-back {
+.btn__back {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,7 +19,7 @@
     gap: 8px;
 }
 
-.btn-back>span {
+.btn__back>span {
     font-size: var(--fs-details);
     font-weight: 600;
 }
@@ -60,7 +61,7 @@
     flex-wrap: wrap;
     gap: 5px;
 }
-.border-btn {
+.btn__border {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -82,4 +83,26 @@
         justify-content: space-between;
         width: 100%;
     }
+}
+
+.loading__icon{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+.container{
+    max-width: 90%;
+    margin:auto;
+    padding-block: 1.25rem;
+    min-height: 100vh;
+}
+.grid {
+    display:grid;
+    padding-block:2.5rem;
+    grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
+    gap: 4rem;
+    justify-content: space-between;
+    content-visibility: auto;
 }
