--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,19 @@
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 
 /* Set core root defaults */
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--clr-text);
+  border-radius: 1rem;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
 html {
   scroll-behavior: smooth;
+  scrollbar-width: thin;
 }
 
 /* Set core body defaults */
