--- a/src/styles/components.module.css
+++ b/src/styles/components.module.css
@@ -193,3 +193,31 @@
     justify-content: center;
     margin: auto;
 }
+
+/*goto top*/
+.goto__top{
+    --size :40px;
+    width:var(--size);
+    height:var(--size);
+    background-color: var(--clr-element);
+    border-radius: 50%;
+    position: fixed;
+    bottom:1.5rem;
+    right: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--clr-text);
+    opacity: 0;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    pointer-events: none;
+    cursor: pointer;
+    transform: translateY(10px);
+    transition: transform 0.3s ease-in-out,opacity 0.3s ease-in-out;
+}
+
+.goto__top[data-visible="true"]{
+    opacity: 1;
+    pointer-events: all;
+    transform: translateY(0);
+}
