--- a/src/styles/components.module.css
+++ b/src/styles/components.module.css
@@ -173,8 +173,7 @@
     padding-block:2.5rem;
     grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
     gap: 4rem;
-    justify-content: space-between;
-    content-visibility: auto;
+    /* justify-content: space-between; */
 }
 
 /*container styles*/
