--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ input{
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
-/* @media (prefers-reduced-motion: reduce) {
+@media (prefers-reduced-motion: reduce) {
   html:focus-within {
    scroll-behavior: auto;
   }
@@ -80,4 +80,4 @@ input{
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
-} */
+}
